[gd_scene load_steps=10 format=3 uid="uid://g1lu8kmfx76g"]

[ext_resource type="Script" path="res://scn/logic/InputHandler.gd" id="1_g372b"]
[ext_resource type="Script" path="res://scn/player/CharacterMovement.gd" id="1_nvq3w"]
[ext_resource type="Script" path="res://scn/logic/PlayerState.gd" id="3_b1hxw"]
[ext_resource type="Script" path="res://scn/player/Harvest_Area.gd" id="4_dkrk4"]
[ext_resource type="Script" path="res://scn/player/SpellPunch.gd" id="5_p5lkr"]
[ext_resource type="Script" path="res://scn/player/HaverstEffect.gd" id="6_iqjgl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xn3is"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jlvyh"]
radius = 51.06

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfi2c"]
size = Vector2(210.75, 155)

[node name="player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_nvq3w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xn3is")
debug_color = Color(0, 0.596078, 0.721569, 0.419608)

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("1_g372b")

[node name="PlayerState" type="Node" parent="." node_paths=PackedStringArray("player", "inputhandler", "taker")]
script = ExtResource("3_b1hxw")
player = NodePath("..")
inputhandler = NodePath("../InputHandler")
taker = NodePath("../Harvest_Area")
spell_duration = 0.4
backimpulse_spell = 500.0
speed = 300.0

[node name="Harvest_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("4_dkrk4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Harvest_Area"]
shape = SubResource("CircleShape2D_jlvyh")
debug_color = Color(0.819608, 0.454902, 0.745098, 0.419608)

[node name="LookAt" type="Node2D" parent="."]

[node name="SpellPunch" type="Area2D" parent="LookAt"]
position = Vector2(49, 0)
collision_layer = 0
monitorable = false
script = ExtResource("5_p5lkr")
force = 1000.0

[node name="Collider" type="CollisionShape2D" parent="LookAt/SpellPunch"]
position = Vector2(82, -2)
shape = SubResource("RectangleShape2D_qfi2c")
debug_color = Color(0.686275, 0.498039, 0, 0.419608)

[node name="HaverstEffect" type="Node2D" parent="."]
script = ExtResource("6_iqjgl")

[connection signal="start_idle" from="PlayerState" to="Harvest_Area" method="reset_search"]
[connection signal="start_spells" from="PlayerState" to="LookAt/SpellPunch" method="spell"]
[connection signal="area_exited" from="Harvest_Area" to="Harvest_Area" method="_on_area_exited"]
[connection signal="close_to" from="Harvest_Area" to="PlayerState" method="snap_to"]
[connection signal="havest_lost" from="Harvest_Area" to="PlayerState" method="_on_harvest_area_havest_lost"]
